# fastapiAi

./: .env  alembic.ini  main.py  pyproject.toml
DBconn/: db.py
chat/: chat_view.py  crud.py  schemas.py
fChat/: fun.py
migrations/: env.py
migrations/versions/: 4315dcf95151_new.py  55d89e543326_новое_изменение.py  7b9244298502_initial_migration.py
models/: models.py
users/: crud.py  sсhemas.py  user_views.py
