[project]
name = "fastapitesting"
version = "0.1.0"
description = ""
authors = [
    {name = "Dedzyuka"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
name = "fastapitesting"
version = "0.1.0"
description = ""
authors = ["Dedzyuka"]
readme = "README.md"
packages = [
    { include = "main" }
]